--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>hola</h1>
+    <section id="app">
+      <aside>
+        <header>
+          <div class="profile">
+            <img src="https://placehold.co/100x100" alt="" />
+            <h2>Zoe Valverde</h2>
+          </div>
+          <div class="actions">
+            <button>
+              <img src="assets/images/camera-icon.svg" alt="botón-cámara" />
+            </button>
+            <button>
+              <img src="assets/images/image-icon.svg" alt="botón-galeria" />
+            </button>
+            <button>
+              <img src="assets/images/setting-icon.svg" alt="botón-configuración"/>
+            </button>
+          </div>
+        </header>
+        <div class="search">
+            <form>
+              <input placeholder="Buscar o Buscar un chat o iniciar uno nuevo" type="search"> 
+            </form>
+          </div>
+          <section class="chats-section">
+            <button class="chat">
+              <img src="https://placehold.co/100x100" alt="foto-de-perfil">
+              <div>
+                <h3>Maria Juana</h3>
+                <p>Mañana llevo chocotorta</p>
+              </div>
+            </button>
+            <button class="chat">
+              <img src="https://placehold.co/100x100" alt="foto-de-perfil">
+              <div>
+                <h3>Luis Miguel</h3>
+                <p>Ayer ví la película de Superman</p>
+              </div>
+            </button><button class="chat">
+              <img src="https://placehold.co/100x100" alt="foto-de-perfil">
+              <div>
+                <h3>Erica</h3>
+                <p>Estás hoy?</p>
+              </div>
+            </button>
+          </section>
+      </aside>
+    </section>
   </body>
 </html>
