--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <aside>
         <header>
           <div class="profile">
-            <img src="https://placehold.co/100x100" alt="" />
+            <img class="profile-photo" src="https://placehold.co/100x100" alt="" />
             <h2>Zoe Valverde</h2>
           </div>
-          <div class="actions">
+           <div class="actions">
             <button>
               <img src="assets/images/camera-icon.svg" alt="botón-cámara" />
             </button>
