change:text search and style chat panel and footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="search">
             <form>
-              <input placeholder="Buscar o Buscar un chat o iniciar uno nuevo" type="search"> 
+              <input placeholder="Buscar un chat o iniciar uno nuevo" type="search"> 
             </form>
           </div>
 
